syntax = "proto3";

package org.project_planton.provider.auth0.auth0connection.v1;

import "buf/validate/validate.proto";

// Auth0ConnectionSpec defines the configuration for an Auth0 Connection.
// A connection in Auth0 represents an identity provider - either a user database,
// social identity provider (Google, Facebook, GitHub), or enterprise identity provider (SAML, OIDC, LDAP).
//
// This spec focuses on the 80/20 use case: configuring common connection types
// with sensible defaults while exposing the essential configuration options.
//
// Supported connection strategies:
// - Database: auth0, Username-Password-Authentication
// - Social: google-oauth2, facebook, github, linkedin, twitter, microsoft-account
// - Enterprise: samlp, oidc, ad, adfs, waad
message Auth0ConnectionSpec {
  // strategy is the identity provider strategy/type for this connection.
  // This determines how users authenticate and what additional configuration is required.
  //
  // Database strategies:
  // - "auth0": Auth0's hosted database (default, recommended for most use cases)
  //
  // Social strategies:
  // - "google-oauth2": Google OAuth 2.0
  // - "facebook": Facebook Login
  // - "github": GitHub OAuth
  // - "linkedin": LinkedIn OAuth
  // - "twitter": Twitter OAuth
  // - "microsoft-account": Microsoft Account (personal)
  // - "apple": Sign in with Apple
  //
  // Enterprise strategies:
  // - "samlp": SAML Protocol
  // - "oidc": OpenID Connect
  // - "waad": Windows Azure Active Directory (Entra ID)
  // - "ad": Active Directory/LDAP
  // - "adfs": Active Directory Federation Services
  //
  // https://registry.terraform.io/providers/auth0/auth0/latest/docs/resources/connection#strategy
  string strategy = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      in: [
        "auth0",
        "google-oauth2",
        "facebook",
        "github",
        "linkedin",
        "twitter",
        "microsoft-account",
        "apple",
        "samlp",
        "oidc",
        "waad",
        "ad",
        "adfs"
      ]
    }
  ];

  // display_name is the human-readable name shown in the Auth0 Universal Login page.
  // This is the name users will see when choosing how to log in.
  // If not specified, Auth0 will use a default name based on the strategy.
  // Example: "Google", "Company SSO", "Sign up with Email"
  string display_name = 2;

  // enabled_clients is a list of Auth0 application client IDs that can use this connection.
  // Only applications in this list will show this connection as a login option.
  // If empty, no applications will be able to use this connection.
  // You can find client IDs in the Auth0 dashboard under Applications.
  repeated string enabled_clients = 3;

  // is_domain_connection indicates whether this connection can be used for identifier-first
  // authentication flows. When true, Auth0 will attempt to discover the appropriate
  // connection based on the user's email domain.
  // Default: false
  bool is_domain_connection = 4;

  // realms are the identifiers that can be used for this connection in authentication requests.
  // This is useful for routing users to the correct connection.
  // If not specified, defaults to the connection name.
  repeated string realms = 5;

  // show_as_button controls whether this connection shows as a button on the Universal Login page.
  // When false, the connection will only be used if explicitly requested or discovered via domain.
  // Default: true
  bool show_as_button = 6;

  // metadata is a map of custom metadata key-value pairs to store with the connection.
  // This can be used to store integration-specific identifiers or configuration.
  // Maximum 10 key-value pairs, with keys and values up to 255 characters each.
  map<string, string> metadata = 7;

  // database_options configures database connection behavior.
  // Only applicable when strategy is "auth0" (Auth0 database).
  Auth0DatabaseOptions database_options = 10;

  // social_options configures social identity provider connections.
  // Only applicable when strategy is a social provider (google-oauth2, facebook, github, etc.).
  Auth0SocialOptions social_options = 11;

  // saml_options configures SAML enterprise connections.
  // Only applicable when strategy is "samlp".
  Auth0SamlOptions saml_options = 12;

  // oidc_options configures OpenID Connect enterprise connections.
  // Only applicable when strategy is "oidc".
  Auth0OidcOptions oidc_options = 13;

  // azure_ad_options configures Azure AD/Entra ID enterprise connections.
  // Only applicable when strategy is "waad".
  Auth0AzureAdOptions azure_ad_options = 14;
}

// Auth0DatabaseOptions configures Auth0's hosted database connection.
// These options control password policies, username requirements, and security settings.
message Auth0DatabaseOptions {
  // password_policy defines the password complexity requirements.
  // - "none": No password requirements
  // - "low": At least 6 characters
  // - "fair": At least 8 characters, including lower and upper case
  // - "good": At least 8 characters, including lower, upper, numeric
  // - "excellent": At least 10 characters, including lower, upper, numeric, special
  // Default: "good"
  string password_policy = 1 [(buf.validate.field).string = {
    in: [
      "",
      "none",
      "low",
      "fair",
      "good",
      "excellent"
    ]
  }];

  // requires_username determines if users must provide a username in addition to email.
  // When true, users sign up with both username and email.
  // Default: false
  bool requires_username = 2;

  // disable_signup prevents new user signups through this connection.
  // Useful when you only want existing users to log in, or when onboarding is done programmatically.
  // Default: false
  bool disable_signup = 3;

  // brute_force_protection enables protection against brute force login attacks.
  // When enabled, Auth0 will block login attempts after multiple failures.
  // Default: true (recommended)
  bool brute_force_protection = 4;

  // password_history_size is the number of previous passwords to check against.
  // Users cannot reuse passwords from their history. Set to 0 to disable.
  // Valid range: 0-24
  // Default: 5
  int32 password_history_size = 5 [(buf.validate.field).int32 = {
    gte: 0
    lte: 24
  }];

  // password_no_personal_info prevents passwords containing user's personal information
  // (name, username, email). Recommended for security.
  // Default: true
  bool password_no_personal_info = 6;

  // password_dictionary enables checking passwords against a dictionary of common passwords.
  // When true, users cannot use common/weak passwords.
  // Default: true
  bool password_dictionary = 7;

  // mfa_enabled enables Multi-Factor Authentication for this connection.
  // When true, users will be prompted for a second factor during login.
  // Default: false
  bool mfa_enabled = 8;
}

// Auth0SocialOptions configures social identity provider connections (Google, Facebook, GitHub, etc.).
// These credentials are obtained from the respective social provider's developer console.
message Auth0SocialOptions {
  // client_id is the OAuth client ID from the social provider.
  // This is obtained from the provider's developer console.
  // Required for all social connections.
  string client_id = 1 [(buf.validate.field).required = true];

  // client_secret is the OAuth client secret from the social provider.
  // This is obtained from the provider's developer console.
  // Required for all social connections.
  string client_secret = 2 [(buf.validate.field).required = true];

  // scopes is a list of OAuth scopes to request from the social provider.
  // These determine what user information Auth0 can access.
  // If not specified, default scopes for the strategy will be used.
  // Example for Google: ["openid", "profile", "email"]
  repeated string scopes = 3;

  // allowed_audiences restricts which audiences (applications) can use this connection.
  // Only applicable for providers that support audience restrictions.
  repeated string allowed_audiences = 4;

  // upstream_params are custom parameters to pass to the upstream social provider.
  // Useful for provider-specific features like login hints or prompt types.
  // Example: {"login_hint": "user@example.com", "prompt": "select_account"}
  map<string, string> upstream_params = 5;
}

// Auth0SamlOptions configures SAML enterprise connections.
// SAML is commonly used for enterprise SSO integrations.
message Auth0SamlOptions {
  // sign_in_endpoint is the SAML Identity Provider's Single Sign-On URL.
  // This is where Auth0 sends SAML authentication requests.
  // Also known as "SSO URL" or "Login URL".
  // Required for SAML connections.
  string sign_in_endpoint = 1 [(buf.validate.field).required = true];

  // signing_cert is the X.509 signing certificate from the Identity Provider.
  // Used to verify the signature on SAML responses.
  // Should be in PEM format (including BEGIN/END CERTIFICATE headers).
  // Required for SAML connections.
  string signing_cert = 2 [(buf.validate.field).required = true];

  // sign_out_endpoint is the SAML Identity Provider's Single Logout URL.
  // This is where Auth0 sends logout requests.
  // Optional but recommended for complete logout functionality.
  string sign_out_endpoint = 3;

  // entity_id is the unique identifier for the Identity Provider.
  // Also known as "Issuer" or "EntityID".
  // If not specified, Auth0 will attempt to derive it from the metadata.
  string entity_id = 4;

  // protocol_binding specifies how SAML requests should be sent.
  // - "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect": URL-encoded in query string
  // - "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST": Form POST
  // Default: HTTP-Redirect
  string protocol_binding = 5 [(buf.validate.field).string = {
    in: [
      "",
      "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
      "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST"
    ]
  }];

  // user_id_attribute is the SAML attribute to use as the user identifier.
  // Default: "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier"
  string user_id_attribute = 6;

  // sign_request indicates whether Auth0 should sign SAML requests.
  // Required by some Identity Providers.
  // Default: false
  bool sign_request = 7;

  // signature_algorithm is the algorithm used for signing SAML requests.
  // - "rsa-sha256": RSA with SHA-256 (recommended)
  // - "rsa-sha1": RSA with SHA-1 (deprecated, use only for legacy systems)
  // Default: rsa-sha256
  string signature_algorithm = 8 [(buf.validate.field).string = {
    in: [
      "",
      "rsa-sha256",
      "rsa-sha1"
    ]
  }];

  // digest_algorithm is the algorithm used for digest in SAML signatures.
  // - "sha256": SHA-256 (recommended)
  // - "sha1": SHA-1 (deprecated, use only for legacy systems)
  // Default: sha256
  string digest_algorithm = 9 [(buf.validate.field).string = {
    in: [
      "",
      "sha256",
      "sha1"
    ]
  }];

  // attribute_mappings maps SAML attributes to Auth0 user profile fields.
  // Keys are Auth0 profile fields (email, name, given_name, family_name, nickname, picture).
  // Values are SAML attribute names from the IdP response.
  map<string, string> attribute_mappings = 10;
}

// Auth0OidcOptions configures OpenID Connect enterprise connections.
// Used for integrating with OIDC-compliant identity providers.
message Auth0OidcOptions {
  // issuer is the OIDC issuer URL (the "iss" claim value).
  // Auth0 will use OIDC Discovery to fetch configuration from /.well-known/openid-configuration
  // Required for OIDC connections.
  string issuer = 1 [(buf.validate.field).required = true];

  // client_id is the OAuth client ID from the OIDC provider.
  // Obtained from the provider's application registration.
  // Required for OIDC connections.
  string client_id = 2 [(buf.validate.field).required = true];

  // client_secret is the OAuth client secret from the OIDC provider.
  // Required for OIDC connections using authorization code flow.
  string client_secret = 3;

  // scopes is a list of OIDC scopes to request.
  // "openid" is always requested implicitly.
  // Common scopes: "profile", "email", "address", "phone"
  // Default: ["openid", "profile", "email"]
  repeated string scopes = 4;

  // type specifies the OIDC flow type.
  // - "front_channel": Authorization Code Flow (recommended for web apps)
  // - "back_channel": Uses token endpoint directly
  // Default: front_channel
  string type = 5 [(buf.validate.field).string = {
    in: [
      "",
      "front_channel",
      "back_channel"
    ]
  }];

  // authorization_endpoint overrides the authorization endpoint from discovery.
  // Only set this if the provider's discovery document is incorrect.
  string authorization_endpoint = 6;

  // token_endpoint overrides the token endpoint from discovery.
  // Only set this if the provider's discovery document is incorrect.
  string token_endpoint = 7;

  // userinfo_endpoint overrides the userinfo endpoint from discovery.
  // Only set this if the provider's discovery document is incorrect.
  string userinfo_endpoint = 8;

  // jwks_uri overrides the JWKS URI from discovery.
  // Only set this if the provider's discovery document is incorrect.
  string jwks_uri = 9;

  // attribute_mappings maps OIDC claims to Auth0 user profile fields.
  // Keys are Auth0 profile fields (email, name, given_name, family_name, nickname, picture).
  // Values are OIDC claim names from the ID token or userinfo response.
  map<string, string> attribute_mappings = 10;
}

// Auth0AzureAdOptions configures Azure Active Directory (Entra ID) enterprise connections.
// Used for integrating with Microsoft Azure AD for enterprise SSO.
message Auth0AzureAdOptions {
  // client_id is the Application (client) ID from Azure AD app registration.
  // Found in Azure Portal > Azure Active Directory > App Registrations > Your App > Overview
  // Required for Azure AD connections.
  string client_id = 1 [(buf.validate.field).required = true];

  // client_secret is the client secret from Azure AD app registration.
  // Found in Azure Portal > Azure Active Directory > App Registrations > Your App > Certificates & secrets
  // Required for Azure AD connections.
  string client_secret = 2 [(buf.validate.field).required = true];

  // domain is the Azure AD tenant domain.
  // This can be the primary domain (e.g., "contoso.onmicrosoft.com")
  // or a custom domain (e.g., "contoso.com").
  // Required for Azure AD connections.
  string domain = 3 [(buf.validate.field).required = true];

  // tenant_id is the Azure AD tenant ID (Directory ID).
  // Found in Azure Portal > Azure Active Directory > Overview
  // If not specified, "common" is used, allowing any Azure AD tenant.
  string tenant_id = 4;

  // use_common_endpoint determines whether to use the common endpoint.
  // When true, allows users from any Azure AD tenant (multi-tenant app).
  // When false, restricts to the specified tenant.
  // Default: false
  bool use_common_endpoint = 5;

  // max_groups_to_retrieve limits the number of groups retrieved from Azure AD.
  // Azure AD can return many groups; set this to limit the groups in the user profile.
  // Set to 0 for no limit.
  // Default: 50
  int32 max_groups_to_retrieve = 6 [(buf.validate.field).int32 = {gte: 0}];

  // should_trust_email_verified indicates whether to trust Azure AD's email_verified claim.
  // When true, Auth0 trusts that Azure AD has verified the user's email.
  // Default: true
  bool should_trust_email_verified = 7;

  // api_enable_users enables the ability to retrieve users from the Azure AD directory.
  // When true, you can use Auth0's Management API to list users from Azure AD.
  // Requires additional Azure AD permissions (Directory.Read.All).
  // Default: false
  bool api_enable_users = 8;
}
